hphp/hack/test/typecheck/capture_this1.php.exp
File "capture_this1.php", line 4, characters 24-28:
Cannot use $this as lexical variable (Naming[2077])
