hphp/hack/test/typecheck/capture_this1.php
<?hh

function f() {
  $a = function() use ($this) {};
}
